src/test/ui/parser/self-in-function-arg.stderr
error: unexpected `self` parameter in function
  --> $DIR/self-in-function-arg.rs:1:15
   |
LL | fn foo(x:i32, self: i32) -> i32 { self }
   |               ^^^^ not valid as function parameter
   |
   = note: `self` is only valid as the first parameter of an associated function

error: aborting due to previous error

