src/test/ui/parser/self-in-function-arg.rs
fn foo(x:i32, self: i32) -> i32 { self } //~ ERROR unexpected `self` argument in function

fn main() {}
